--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -1,16 +1,12 @@
 #Command 
 
-# 如何知道自己的 IP Address？
-
-### 從 `ifconfig` 找 Local IP Address
+# `ifconfig`
 
 ```bash
 ifconfig
 ```
 
-這個指令會列出所有與 network 相關的資訊，須人工找到 `en0` 或 `en1` 區段（`status: active` 的那個），這個區段的其中有一行會是 `inet` 開頭，緊接在 `inet` 後的就是你的 local IP address。
-
-Example Output:
+Example output:
 
 ```plaintext
 en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
@@ -21,31 +17,44 @@ en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
     nd6 options=201<PERFORMNUD,DAD>
     media: autoselect
     status: active
+en1: flags=8963<UP,BROADCAST,SMART,RUNNING,PROMISC,SIMPLEX,MULTICAST> mtu 1500
+    options=460<TSO4,TSO6,CHANNEL_IO>
+    ether 36:b8:2f:45:ff:80
+    media: autoselect <full-duplex>
+    status: inactive
 ```
+
+這個指令會列出這台電腦上所有 network interfaces 的資訊，一個段落就是一個 interface，開頭是該 interface 的名稱，不同種類的 interface 會有不同 interface 名稱，比如 `en` 就代表無線網路的 interface。
+
+每個段落都由若干個 key-value 組成，以下為幾個較常看的 keys 與其 value 的含義：
+
+- `ether`：該 interface 的 MAC address
+- `inet`：該 interface 的 IPv4 address
+- `inet6`：該 interface 的 IPv6 address
+- `status`：該 interface 目前是否啟用
+
+# 可以給我你的 IP Address 嗎？
+
+### 從 `ifconfig` 找 Local IP Address
+
+`ifconfig` 的細節請看上一段。這裡須人工找到名為 `en0` 或 `en1` 且 `status: active` 的那個段落，找到底下的 `inet` (IPv4) 或 `inet6` (IPv6) key。
 
 ### 用 `ipconfig getifaddr en0` 取得 Local IP Address
 
 - 是 `ipconfig`，不是 `ifconfig`
-- 這個指令會直接 output 一行 local IP address
 - 如果輸入 `en0` 發現沒有 output，就換 `en1`
+
+Example output:
+
+```plaintext
+192.168.50.88
+```
 
 ### 用 `curl ifconfig.me` 取得 Public IP Address
 
 如果你所連到的網路在 [[NAT]] 底下，那就必須從外部才能知道自己的 public IP address，因此這裡要使用 `curl` 發 request 到 `https://ifconfig.me` 這個外部網站，取得自己的 public IP address 後 stdout。
 
 其實並不是只有 `https://ifconfig.me` 可以查詢 public IP address，其他網站（如 `https://ipinfo.io`）甚至提供了更完整的資訊，所以也可以試試看 `curl ipinfo.io`。
-
-# `ping <HOST>`
-
-`<HOST>` 的部分可以填入 IP address 或 domain，但**不可**加上 protocol, url path, port, query string 等額外資訊。
-
-`ping` 使用 ICMP (Internet Control Message Protocol) 來確認目標 IP address/domain 是否可以在網路上被找到，因此 ==ping host 成功只能代表網路的 routing 沒問題，並不代表該 host 可以正常提供服務==。
-
-e.g.
-
-```bash
-ping www.google.com
-```
 
 # `curl <URL>`
 
@@ -185,9 +194,63 @@ wget --mirror -p --convert-links -P ./my_folder https://example.com/
 
 #TODO 
 
+# `ping <HOST>`
+
+- `ping` 使用 [[ICMP]] 來確認 destination host 是否可以在網路上被找到，因此 ==ping 成功只能代表 network routing 沒問題，並不代表該 host 可以正常提供服務==
+- `<HOST>` 的部分可以填入 IP address 或 domain，但不可加上 protocol、path、port、query string 等額外資訊
+- Destination host 收到 ping 後會回覆，這個回覆被稱為 pong
+
+e.g.
+
+```bash
+ping www.google.com
+```
+
+Example output:
+
+```plaintext
+PING www.google.com (142.251.42.228): 56 data bytes
+64 bytes from 142.251.42.228: icmp_seq=0 ttl=57 time=6.806 ms
+64 bytes from 142.251.42.228: icmp_seq=1 ttl=57 time=14.924 ms
+64 bytes from 142.251.42.228: icmp_seq=2 ttl=57 time=6.555 ms
+64 bytes from 142.251.42.228: icmp_seq=3 ttl=57 time=14.044 ms
+--- www.google.com ping statistics ---
+4 packets transmitted, 4 packets received, 0.0% packet loss
+round-trip min/avg/max/stddev = 6.555/10.582/14.924/3.915 ms
+```
+
 # `traceroute <HOST>`
 
-#TODO 
+`traceroute` 使用 [[ICMP]] 來取得自己到 destination host 的路徑（會經過哪些 routers）以及花費的時間。
+
+e.g.
+
+```bash
+traceroute www.google.com
+```
+
+Example output:
+
+```plaintext
+traceroute to www.google.com (142.251.42.228), 64 hops max, 40 byte packets
+ 1  router.asus.com (192.168.50.1)  3.732 ms  4.024 ms  4.261 ms
+ 2  192.168.18.1 (192.168.18.1)  4.252 ms  4.300 ms  4.336 ms
+ 3  218-35-172-254.cm.dynamic.apol.com.tw (218.35.172.254)  10.899 ms  9.674 ms  7.398 ms
+ 4  10.254.0.213 (10.254.0.213)  5.327 ms  5.743 ms  5.391 ms
+ 5  10.254.0.61 (10.254.0.61)  10.638 ms  14.287 ms
+    10.254.0.5 (10.254.0.5)  7.619 ms
+ 6  10.254.0.201 (10.254.0.201)  29.032 ms  27.352 ms  22.353 ms
+ 7  142.250.168.254 (142.250.168.254)  7.498 ms  6.665 ms  6.349 ms
+ 8  * * *
+ 9  209.85.245.64 (209.85.245.64)  13.882 ms
+    142.251.226.168 (142.251.226.168)  8.775 ms
+    142.251.77.86 (142.251.77.86)  6.618 ms
+10  192.178.106.56 (192.178.106.56)  6.429 ms
+    209.85.142.121 (209.85.142.121)  6.837 ms
+    192.178.106.166 (192.178.106.166)  6.614 ms
+11  tsa01s11-in-f4.1e100.net (142.251.42.228)  7.654 ms  9.140 ms
+    192.178.105.197 (192.178.105.197)  7.543 ms
+```
 
 # `route`
 
