--- a/Web Development/訪問網站時發生了哪些事.md
+++ b/Web Development/訪問網站時發生了哪些事.md
@@ -45,9 +45,14 @@ e.g.
 >[!Note]
 >關於 DNS 以及 internet 中 DNS lookup 的詳細運作機制，請見[[DNS|本文]]。
 
-# 步驟五：ARP Lookup
+# 步驟五：ARP Process
 
-#TODO 
+拿到 server 的 IP address 後，你的裝置須要將資料傳給它的 first-hop router，請 first-hop router 幫你將資料往 Internet 送，所以你的裝置會須要知道 first-hop router 的 MAC address 才能將資料傳給它，而 first-hop router 也會須要知道下一站 router 的 MAC address，依此類推。
+
+拿到 MAC address 的方法是透過 ARP。
+
+>[!Note]
+>關於什麼是 MAC address 與 ARP，請見[[MAC Address & ARP|本文]]。
 
 # 步驟六：Network Routing
 
