--- a/Web Development/訪問網站時發生了哪些事.md
+++ b/Web Development/訪問網站時發生了哪些事.md
@@ -30,7 +30,16 @@ e.g.
 
 若你輸入的是 URL，但使用的 scheme (protocol) 是 http 而非 https，則瀏覽器在 parse URL 後會先檢查自己所維護的一個 [[HSTS]] list，若你要訪問的網域在 HSTS list 中，瀏覽器就會把 http 改成 https，以確保你不受到 man-in-the-middle attacks。
 
-# 步驟四：DNS Lookup
+# 步驟四：ARP Process
+
+你的裝置現在要將資料傳給它的 first-hop router，請 first-hop router 將資料往 Internet 送。你的裝置會須要知道 first-hop router 的 MAC address 才能將資料傳給它，而 first-hop router 也會須要知道下一站 router 的 MAC address，依此類推。
+
+拿到 MAC address 的方法是透過 ARP。
+
+>[!Note]
+>關於什麼是 MAC address 與 ARP，請見[[MAC Address & ARP|本文]]。
+
+# 步驟五：DNS Lookup
 
 當你輸入的 URL 是 domain name 不是 IP address 時，瀏覽器會依照以下順序查詢 IP address：
 
@@ -44,15 +53,6 @@ e.g.
 
 >[!Note]
 >關於 DNS 以及 internet 中 DNS lookup 的詳細運作機制，請見[[DNS|本文]]。
-
-# 步驟五：ARP Process
-
-拿到 server 的 IP address 後，你的裝置須要將資料傳給它的 first-hop router，請 first-hop router 幫你將資料往 Internet 送，所以你的裝置會須要知道 first-hop router 的 MAC address 才能將資料傳給它，而 first-hop router 也會須要知道下一站 router 的 MAC address，依此類推。
-
-拿到 MAC address 的方法是透過 ARP。
-
->[!Note]
->關於什麼是 MAC address 與 ARP，請見[[MAC Address & ARP|本文]]。
 
 # 步驟六：Network Routing
 
