--- a/Operating System/Shell/6 - 與使用者、群組相關的指令.md
+++ b/Operating System/Shell/6 - 與使用者、群組相關的指令.md
@@ -1,6 +1,6 @@
 #Command 
 
-一個 Linux OS 中可以存在若干個 users，其中必定會有一個 user 叫做 `root`，`root` 擁有系統中的所有（最高）[[L7 - 與 Permission 相關的指令|權限]]，又叫做 superuser。
+一個 Linux OS 中可以存在若干個 users，其中必定會有一個 user 叫做 `root`，`root` 擁有系統中的所有（最高）[[7 - 與 Permission 相關的指令|權限]]，又叫做 superuser。
 
 `root` 的權限是最高的，因此強烈建議平時不要以 `root` 身份登入系統，否則你執行的應用程式都會獲得 `root` 的權限（也就是所有權限）。
 
@@ -14,9 +14,9 @@
 su
 ```
 
-輸入指令後會被要求輸入 `root` user 的密碼，輸入正確後會進入一個新的 shell（屬於當前 shell 的 [[Operating System/Shell/L1 - Introduction#Sub-Shell|sub-shell]]）。
+輸入指令後會被要求輸入 `root` user 的密碼，輸入正確後會進入一個新的 shell（屬於當前 shell 的 [[Operating System/Shell/1 - Introduction#Sub-Shell|sub-shell]]）。
 
-但光使用 `su` 並不會讓[[Operating System/Shell/L1 - Introduction#Environment Variable|環境變數]]跟著變，讀取的 shell 設定檔也還是原本 user 的 home directory 底下的設定檔，只是有了 `root` 的權限而已，如果要讓環境變數也變成 `root` 的，須在指令中加一個 `-`：
+但光使用 `su` 並不會讓[[Operating System/Shell/1 - Introduction#Environment Variable|環境變數]]跟著變，讀取的 shell 設定檔也還是原本 user 的 home directory 底下的設定檔，只是有了 `root` 的權限而已，如果要讓環境變數也變成 `root` 的，須在指令中加一個 `-`：
 
 ```bash
 su -
