--- a/Operating System/Shell/其它常用指令 & 快捷鍵.md
+++ b/Operating System/Shell/其它常用指令 & 快捷鍵.md
@@ -17,7 +17,7 @@
 
 列出所有 alias。
 
-關於 alias 的設定方式，請見[[Operating System/Shell/L1 - Introduction#Alias of Commands|這篇文章]]。
+關於 alias 的設定方式，請見[[Operating System/Shell/1 - Introduction#Alias of Commands|這篇文章]]。
 
 ### `clear`
 
@@ -29,7 +29,7 @@
 
 ### `exit [<EXIT_CODE>]`
 
-以指定的 [[Operating System/Shell/L1 - Introduction#Exit Codes|exit code]] 離開目前的 shell session，exit code 預設為 0。
+以指定的 [[Operating System/Shell/1 - Introduction#Exit Codes|exit code]] 離開目前的 shell session，exit code 預設為 0。
 
 ### `echo <STR>`
 
@@ -42,7 +42,7 @@ echo hello
 echo "hello world"
 ```
 
-- `echo` 搭配 [[L3 - Operators#Output Redirection - `>`|output redirection]] 可以將文字寫入檔案
+- `echo` 搭配 [[3 - Operators#Output Redirection - `>`|output redirection]] 可以將文字寫入檔案
 - 當字串中間含有空格時，不能直接寫在指令後面（比如 `echo hello world`），否則會被視為多個參數，有兩種方法可以處理有空格的字串：
     - 使用 `""` 將字串包起來，比如 `echo "hello world"`
     - 在每個空格前方加上 `\`，讓空格變成跳脫字元，比如 `echo hello\ world`
@@ -59,7 +59,7 @@ echo "hello world"
 
 效果等同於「打開檔案 → 全選檔案內容 → 複製」這個流程。
 
-這個指令中使用到 `<` operator，這個動作稱為 [[L3 - Operators#Input Redirection - `<`|input redirection]]。
+這個指令中使用到 `<` operator，這個動作稱為 [[3 - Operators#Input Redirection - `<`|input redirection]]。
 
 ### `shred [<OPTIONS>] <FILE>`
 
