--- a/Operating System/Shell/與檔案壓縮、打包相關的指令.md
+++ b/Operating System/Shell/與檔案壓縮、打包相關的指令.md
@@ -4,7 +4,7 @@
 
 而檔案壓縮其實就是透過想辦法把這些 **leading zero** 的空間釋放出來給需要的資料用，進而達到縮小檔案大小的效果。你可以想像一個喝完的鋁罐或鋁箔包，中間是空的，壓扁後體積就縮小了。
 
-Data Compression (Source Coding, or Bit-Rate Reduction) 的演算法有很多（詳見 [[Data Compression Algorithms]]），因此也有很多不同的壓縮檔案用的指令。
+Data Compression (Source Coding, or Bit-Rate Reduction) 的演算法有很多（詳見[[Data Compression Algorithms.draft|這篇]]），因此也有很多不同的壓縮檔案用的指令。
 
 壓縮過的檔案無法直接使用，作業系統會不知道如何讀取／寫入／執行它們，因此每一種壓縮方式都會有對應的「解壓縮」，在 Linux 中，不同的壓縮方式壓出來的 file extension 不同，但 file extension 並不會決定檔案本身的性質，僅是方便人類辨識而已。
 
