--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -52,7 +52,7 @@ Example output:
 
 ### 用 `curl ifconfig.me` 取得 Public IP Address
 
-如果你所連到的網路在 [[NAT]] 底下，那就必須從外部才能知道自己的 public IP address，因此這裡要使用 `curl` 發 request 到 `https://ifconfig.me` 這個外部網站，取得自己的 public IP address 後 stdout。
+如果你所連到的網路在 [[NAT.draft|NAT]] 底下，那就必須從外部才能知道自己的 public IP address，因此這裡要使用 `curl` 發 request 到 `https://ifconfig.me` 這個外部網站，取得自己的 public IP address 後 stdout。
 
 其實並不是只有 `https://ifconfig.me` 可以查詢 public IP address，其他網站（如 `https://ipinfo.io`）甚至提供了更完整的資訊，所以也可以試試看 `curl ipinfo.io`。
 
