--- a/Web Development/瀏覽器中的儲存空間.draft.md
+++ b/Web Development/瀏覽器中的儲存空間.draft.md
@@ -1,4 +1,4 @@
-在瀏覽器中主要有三個地方可以儲存資料，分別是 Cookies, Local Storage 以及 Session Storage。
+在瀏覽器中主要有三個地方可以儲存資料，分別是 cookies、local storage 以及 session storage。
 
 ![[cookie-vs-localstorage-vs-session.png]]
 
@@ -12,8 +12,7 @@
 
 ### Local Storage
 
--   近年來，Local Storage 代替了 Cookie 管理購物車的工作
--   存儲 HTML 遊戲產生的數據
+#TODO 
 
 ### Session Storage
 
