--- a/Operating System/Shell/與檔案壓縮、打包相關的指令.md
+++ b/Operating System/Shell/與檔案壓縮、打包相關的指令.md
@@ -1,16 +1,16 @@
 #Command 
 
-以文字檔為例，現今的文字檔常見的是以 [[Character Encoding & Decoding#UTF|UTF-8]] 編碼，一個 character 會佔用到 2 bytes 甚至 3 bytes，然而一個 ASCII character 的大小其實只有 1 byte，因此一個 UTF-8 編碼文字檔中，ASCII character 的開頭會有很多個 `0`，這樣其實很浪費空間。
+以文字檔為例，現今的文字檔常見的是以 [[Character Encoding & Decoding#UTF-8|UTF-8]] 編碼，一個 character 會佔用到 2 bytes 甚至 3 bytes，然而一個 ASCII character 的大小其實只有 1 byte，因此一個 UTF-8 編碼文字檔中，ASCII character 的開頭會有很多個 `0` (leading zeros)，這樣其實很浪費空間。
 
-而檔案壓縮其實就是透過想辦法把這些 **leading zero** 的空間釋放出來給需要的資料用，進而達到縮小檔案大小的效果。你可以想像一個喝完的鋁罐或鋁箔包，中間是空的，壓扁後體積就縮小了。
+而檔案壓縮其實就是透過把這些 leading zeros 的空間釋放出來，進而達到縮小檔案大小的效果。可以想像一個喝完的鋁箔包，中間是空的，壓扁後體積就縮小了。
 
 Data Compression (Source Coding, or Bit-Rate Reduction) 的演算法有很多（詳見[[Data Compression Algorithms.draft|這篇]]），因此也有很多不同的壓縮檔案用的指令。
 
-壓縮過的檔案無法直接使用，作業系統會不知道如何讀取／寫入／執行它們，因此每一種壓縮方式都會有對應的「解壓縮」，在 Linux 中，不同的壓縮方式壓出來的 file extension 不同，但 file extension 並不會決定檔案本身的性質，僅是方便人類辨識而已。
+壓縮過的檔案無法直接使用，作業系統會不知道如何讀取／寫入／執行它們，因此每一種壓縮演算法都會有對應的「解壓縮」演算法。
 
-常見的壓縮方式及 file extension 對應如下：
+在 Linux OS 中，不同的壓縮方式壓出來的 file extension 不同，但 file extension 並不會決定檔案本身的性質，只是方便人類辨識而已，常見的壓縮方式及 file extension 對應如下：
 
-|指令|file extension|演算法|
+|指令|File Extension|演算法|
 |---|---|---|
 |[[#compress]]|`*.Z`|Modified Lempel-Ziv Algorithm|
 |[[#gzip]]|`*.gz`|Lempel-Ziv Algorithm|
@@ -18,9 +18,9 @@ Data Compression (Source Coding, or Bit-Rate Reduction) 的演算法有很多（
 |[[#zip]]|`*.zip`||
 |[[#rar]]|`*.rar`||
 
-上述這些壓縮檔案的指令，一次都只能對單一個檔案進行壓縮，無法一次壓縮多個檔案，也無法壓縮一個 directory，此時我們就需要「打包」(bundle)，有關 bundle 的指令如下：
+上述這些壓縮檔案的指令，一次都只能對單一個檔案進行壓縮，無法一次壓縮多個檔案，也無法壓縮一個資料夾，如果希望可以一次壓縮多個檔案或資料夾，我們須要先將它們「打包」(bundle)，相關指令如下：
 
-|指令|file extension|功能|
+|指令|File Extension|功能|
 |---|---|---|
 |`tar`|`*.tar`|打包|
 |`tar` + `gzip`|`*.tar.gz`|打包＋壓縮|
@@ -87,7 +87,7 @@ gunzip <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
 
 # `bzip2`
 
-一般而言 `bzip2` 壓縮檔案的效果會比 `gzip` 顯著，其中 "b" 代表的是其使用的演算法：Burrows-Wheeler Algorithm。
+一般而言 `bzip2` 壓縮檔案的效果會比 `gzip` 顯著，其中 "b" 代表的是其使用的演算法：Burrows-Wheeler algorithm。
 
 ### 壓縮
 
