--- a/Programming Language/Python/底線的用途.md
+++ b/Programming Language/Python/底線的用途.md
@@ -42,7 +42,7 @@ def _greet():
 
 但是還是可以透過 `from a import _greet` 來 import。
 
-### 五、用來避免變數與 [[Programming Language/Python/零碎筆記#Python 中的保留字|保留字]] 或 Built-In Function 撞名
+### 五、用來避免變數與 [[Programming Language/Python/零碎筆記.draft#Python 中的保留字|保留字]] 或 Built-In Function 撞名
 
 e.g.
 
