--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -9,6 +9,9 @@ ifconfig
 Example output:
 
 ```plaintext
+.
+.
+.
 en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
     options=400<CHANNEL_IO>
     ether 0c:e4:41:e5:cc:8f 
@@ -17,14 +20,12 @@ en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
     nd6 options=201<PERFORMNUD,DAD>
     media: autoselect
     status: active
-en1: flags=8963<UP,BROADCAST,SMART,RUNNING,PROMISC,SIMPLEX,MULTICAST> mtu 1500
-    options=460<TSO4,TSO6,CHANNEL_IO>
-    ether 36:b8:2f:45:ff:80
-    media: autoselect <full-duplex>
-    status: inactive
+.
+.
+.
 ```
 
-這個指令會列出這台電腦上所有 network interfaces 的資訊，一個段落就是一個 interface，開頭是該 interface 的名稱，不同種類的 interface 會有不同 interface 名稱，比如 `en` 就代表無線網路的 interface。
+這個指令會列出這台電腦上所有 network interfaces 的資訊，一個段落就是一個 interface，開頭的冒號前是 interface 的名稱，不同種類的 interface 會有不同名稱，比如 `en` 就代表無線網路的 interface。
 
 每個段落都由若干個 key-value 組成，以下為幾個較常看的 keys 與其 value 的含義：
 
@@ -42,7 +43,7 @@ en1: flags=8963<UP,BROADCAST,SMART,RUNNING,PROMISC,SIMPLEX,MULTICAST> mtu 1500
 ### 用 `ipconfig getifaddr en0` 取得 Local IP Address
 
 - 是 `ipconfig`，不是 `ifconfig`
-- 如果輸入 `en0` 發現沒有 output，就換 `en1`
+- 如果輸入 `en0` 發現沒有輸出值，就換 `en1`
 
 Example output:
 
@@ -60,7 +61,7 @@ Example output:
 
 `curl` 可以用來傳送資料給 server 以及接收從 server 來的資料，其支援包含 FILE, FTP, FTPS, HTTP, HTTPS, WS, WSS… 等幾乎所有你想得到的 protocols，是一個非常全面的指令。
 
-`<URL>` 前面若沒加 protocol，`curl` 就會根據 `<URL>` 猜測最有可能的 protocol（通常是`http`），然後幫你加上去，例如：
+`<URL>` 前面若沒加 protocol，`curl` 就會根據 `<URL>` 猜測最有可能的 protocol（通常是`http`）然後幫你加上去，例如：
 
 ```bash
 curl www.google.com  # will become "http://www.google.com"
@@ -68,7 +69,7 @@ curl www.google.com  # will become "http://www.google.com"
 
 ### 依規則連續發送 Requests
 
-可以使用 `{}` 以及 `[]` 來連續發送多個 requests，其中使用 `{}` 時，裡面要用 `,` 分隔多個想 iterate 的 strings：
+可以使用 `{}` 以及 `[]` 來連續發送多個 requests，其中使用 `{}` 時，裡面要用 `,` 分隔多個想迭代的 strings：
 
 ```bash
 curl "http://site.{one,two,three}.com"
@@ -82,25 +83,25 @@ curl "http://example.com/file[1-10].txt"
 curl "http://example.com/file[a-z:2].txt"
 ```
 
-請記得，使用這些花式的 URL 時，`<URL>` 的外面要用 `""` 包住。
+請記得，使用這些花式的 URL 時，`<URL>` 的外面要用 `" "` 包住。
 
 ### 下載檔案（將 Response 寫入 Disk）
 
-使用 `-o <LOCAL_FILE_NAME>` 或 `--output <LOCAL_FILE_NAME>` option，即可指定將 response 寫入 local 的檔案並命名為 `<LOCAL_FILE_NAME>`：
+使用 `-o <LOCAL_FILE_NAME>` 或 `--output <LOCAL_FILE_NAME>` option，即可指定將 response 寫成檔案並命名為 `<LOCAL_FILE_NAME>`：
 
 ```bash
 curl -o my_file https://example.com
 ```
 
-如果搭配連發 requests 的操作，則可以在 `<LOCAL_FILE_NAME>` 中用變數 `#1`, `#2`, … 來代表第一區塊、第二區塊… 現在 iterate 到的 string：
+如果搭配連發 requests 的操作，則可以在 `<LOCAL_FILE_NAME>` 中用變數 `#1`, `#2`, … 來代表第一區塊、第二區塊… 現在迭代到的 string：
 
 ```bash
 curl "http://{site,host}.host[1-5].com" -o "#1_#2"
 ```
 
-這樣一來 file name 就會是 site_1, site_2, …, host_1, host_2, …。
+這樣一來 file name 就會是 site_1 ~ site_5, host_1 ~ host_5。
 
-如果不想特別想檔案名稱，而是想直接採用檔案在 server 的名字，則可以使用 `-O <URL>` 或 `--remote-name <URL>`：
+如果不想特別想檔案名稱，而是想直接採用檔案在 server 的名字，則可以使用 `-O <URL>`（大寫）或 `--remote-name <URL>`：
 
 ```bash
 curl -O https://example.com/filename.txt
@@ -115,7 +116,7 @@ curl -O https://example.com/filename.txt
 curl -T "img[1-1000].png" ftp://ftp.example.com/
 ```
 
-上方範例是上傳 local 的 img1.png, img2.png, …, img1000.png 等 1000 個檔案到 `ftp.example.com` 這台 server，使用的是 [[檔案傳輸#FTP|FTP]]。
+上方範例是上傳 local 的 img1.png, img2.png, …, img1000.png 等 1000 個檔案到 `ftp.example.com` 這台 server，使用 protocol 的是 [[檔案傳輸#FTP|FTP]]。
 
 # `wget`
 
@@ -124,6 +125,8 @@ wget [<OPTIONS>] <URL> [<URL2> ...]
 ```
 
 `wget` 可以說是 `curl` 的閹割版，但針對「下載資料」提供了比 `curl` 更多的 options 以及更 reliable 的下載服務。
+
+efg `efg`
 
 ### 常用 Options
 
@@ -190,7 +193,7 @@ wget --mirror -p --convert-links -P ./my_folder https://example.com/
 
 `netstat` 可以用來查看網路連線的狀態。
 
-### 常用指令
+### 查詢 Port 狀態的常用指令
 
 ```bash
 # 列出所有 ports
@@ -207,9 +210,50 @@ netstat -au  # 若把 a 換成 l 就是只看 listening 的
 
 # 不要做 DNS lookup: -n
 netstat -an
+```
 
-# 取得離自己最近的 router 的 routing table
-netstat -r  # 輸出會跟 `route -n` 一樣
+Example output:
+
+```plaintext
+Active Internet connections (w/o servers)
+Proto Recv-Q Send-Q Local Address         Foreign Address       State
+tcp        0      0 localhost:42360       localhost:redis       CLOSE_WAIT
+tcp      456      0 localhost:44870       localhost:59270       CLOSE_WAIT
+tcp        0      0 localhost:35370       localhost:29200       ESTABLISHED
+tcp        0      0 localhost:41436       localhost:29200       ESTABLISHED
+tcp        0      0 localhost:6479        localhost:33172       FIN_WAIT2
+  .      .      .         .                       .                .
+  .      .      .         .                       .                .
+  .      .      .         .                       .                .
+```
+
+### 查詢 Routing Table
+
+```bash
+netstat -r
+```
+
+這個指令的輸出會跟 `route -n` 一樣。
+
+### 查詢 Network Interface 狀態
+
+```bash
+netstat -i
+
+# 顯示較詳細的資訊，輸出會跟 ifconfig 一樣
+netstat -ie
+```
+
+Example output of `netstat -i`:
+
+```plaintext
+Name       Mtu   Network       Address            Ipkts Ierrs    Opkts Oerrs  Coll
+lo0        16384 <Link#1>                       5601464     0  5601464     0     0
+lo0        16384 127           localhost        5601464     -  5601464     -     -
+en0        1500  192.168.50    192.168.50.87   72801125     - 17626450     -     -
+ .          .       .             .                 .     .        .     .      .
+ .          .       .             .                 .     .        .     .      .
+ .          .       .             .                 .     .        .     .      .
 ```
 
 ### 參考資料
@@ -309,5 +353,22 @@ router.asus.com (192.168.50.1) at 24:4b:fe:35:13:7c on en0 ifscope [ethernet]
 
 # `dig <DOMAIN>`
 
-- 查詢 `<DOMAIN>` 的 IP address，若
-- `+short` option 可以讓 output 更為簡潔（只保留 IP address 的部分）
+- 查詢 `<DOMAIN>` 的 IP addresses (進行 [[DNS#DNS Lookup|DNS lookup]])
+- `+short` option 可以讓輸出更為簡潔（只保留 IP address 的部分）
+
+e.g.
+
+```bash
+dig +short www.google.com
+```
+
+Output:
+
+```plaintext
+74.125.24.99
+74.125.24.147
+74.125.24.104
+74.125.24.105
+74.125.24.106
+74.125.24.103
+```
