--- a/Operating System/零碎筆記.draft.md
+++ b/Operating System/零碎筆記.draft.md
@@ -26,7 +26,7 @@
 ##### Multiprocessor
 
 - 一台機器有多個 CPUs，這些 CPU 可能是 single-core 或 multi-core
-- 較 reliable，因為當其中一個 CPU 掛掉時，還有其它的可以用
+- 較 reliable，因為當其中一個 CPU crash 時，還有其它的可以用
 - 當多個 CPUs 同時運作時，throughput (吞吐量) 變高
 - 當某個 CPU 正在使用某個 I/O device 時，其他 CPU 就不能使用相同的 I/O device，避免 [[Deadlocks]]
 - OS 較難實作，因為必須處理 processors 之間的溝通
