--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -38,24 +38,21 @@ en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
 
 ### 從 `ifconfig` 找 Local IP Address
 
-`ifconfig` 的細節請看上一段。這裡須人工找到名為 `en0` 或 `en1` 且 `status: active` 的那個段落，找到底下的 `inet` (IPv4) 或 `inet6` (IPv6) key。
+`ifconfig` 的細節請看上一段。這裡須人工找到名為 `en0` 或 `en1` 且 `status: active` 的那個段落，然後找到底下的 `inet` (IPv4) 或 `inet6` (IPv6)。
 
 ### 用 `ipconfig getifaddr en0` 取得 Local IP Address
 
 - 是 `ipconfig`，不是 `ifconfig`
 - 如果輸入 `en0` 發現沒有輸出值，就換 `en1`
 
-Example output:
-
-```plaintext
-192.168.50.88
-```
-
 ### 用 `curl ifconfig.me` 取得 Public IP Address
 
-如果你所連到的網路在 [[NAT.draft|NAT]] 底下，那就必須從外部才能知道自己的 public IP address，因此這裡要使用 `curl` 發 request 到 `https://ifconfig.me` 這個外部網站，取得自己的 public IP address 後 stdout。
+如果你所連到的網路在 [[IP & IP Address#NAT|NAT]] 底下，那就必須從外部才能知道自己的 public IP address，因此這裡要使用 `curl` 發 request 到 `https://ifconfig.me` 這個外部網站，取得自己的 public IP address 後 stdout。
 
 其實並不是只有 `https://ifconfig.me` 可以查詢 public IP address，其他網站（如 `https://ipinfo.io`）甚至提供了更完整的資訊，所以也可以試試看 `curl ipinfo.io`。
+
+>[!Note]
+>關於 local IP address 與 public IP address 的差異，請看[[IP & IP Address|這篇]]。
 
 # `curl <URL>`
 
