--- a/Web Development/訪問網站時發生了哪些事.draft.md
+++ b/Web Development/訪問網站時發生了哪些事.draft.md
@@ -11,7 +11,7 @@
 - Host name（可以是 domain name 或 IP address）
 
 >[!Note]
->關於 URL 的詳細結構，請見[[System Design 101#URL vs. URI vs. URN|本文]]。
+>關於 URL 的詳細結構，請見[[System Design 101.draft#URL vs. URI vs. URN|本文]]。
 
 有些瀏覽器（比如 Google Chrome）可以支援只輸入 domain name (or IP address) 並自動幫你加上 `http://`。
 # 步驟二：URL Percent Encoding
