--- a/Operating System/Shell/6 - 與使用者、群組相關的指令.md
+++ b/Operating System/Shell/6 - 與使用者、群組相關的指令.md
@@ -1,4 +1,4 @@
-#Command 
+#Command
 
 一個 Linux OS 中可以存在若干個 users，其中必定會有一個 user 叫做 `root`，`root` 擁有系統中的所有（最高）[[7 - 與 Permission 相關的指令|權限]]，又叫做 superuser。
 
@@ -36,16 +36,16 @@ su - -c "ls"
 
 `root` 又叫 superuser，是所有 user 的管理者，因此 `su` 指令也可以用來取得任何一個 user 的權限：
 
-```sh
-su <USERNAME>
+```bash
+su {USERNAME}
 ```
 
-此時要輸入的密碼是 `<USERNAME>` 的密碼，不過如果已經以 `root` 身份登入（在 `root` 的 shell 中），則不用另外輸入密碼。
+此時要輸入的密碼是 `{USERNAME}` 的密碼，不過如果已經以 `root` 身份登入（在 `root` 的 shell 中），則不用另外輸入密碼。
 
 # `sudo`
 
-```sh
-sudo [<OPTIONS>] <COMMAND>
+```bash
+sudo [{OPTIONS}] {COMMAND}
 ```
 
 `sudo` 的意思是「以指定使用者的身份執行指令」，在 options 中聲明要以哪個使用者的身份執行，預設是以 `root` user 的身份執行。
@@ -84,7 +84,7 @@ sudo echo hello > myfile
     echo hello | sudo tee myfile
     ```
 
-    - `tee [<FILE>]` 的功能是將 stdin 複製並送至 stdout，後面有放 file 則將 stdin 寫入 file
+    - `tee [{FILE}]` 的功能是將 stdin 複製並送至 stdout，後面有放 file 則將 stdin 寫入 file
     - `sudo` 放在 `tee` 這邊
 
 ### `sudo` 與 `su` 的差別在於輸入的密碼
@@ -99,21 +99,21 @@ sudo echo hello > myfile
 當然不是，事實上 Linux 系統中使用了 `/etc` 底下的 `sudoers` 檔案來限制哪些 users 可以使用 `sudo`，檔案中的 pattern 如下：
 
 ```plaintext
-<USER1> <SOURCE_HOST>=(<USER2>) <COMMAND>
+{USER1} {SOURCE_HOST}=(USER2) {COMMAND}
 ```
 
-這一行設定使得 `<USER1>` 可以從 `<SOURCE_HOST>` 登入 `<USER2>`，並且只能執行 `<COMMAND>` 這個指令。
+這一行設定使得 `{USER1}` 可以從 `{SOURCE_HOST}` 登入 `{USER2}`，並且只能執行 `{COMMAND}` 這個指令。
 
-如果要設定「`<USER1>` 可以從任意 host 登入任意 user，並使用任意 command」，則須設定為：
+如果要設定「`{USER1}` 可以從任意 host 登入任意 user，並使用任意 command」，則須設定為：
 
 ```plaintext
-<USER1> ALL=(ALL) ALL
+{USER1} ALL=(ALL) ALL
 ```
 
 也可以設定群組的權限，須在最前面加一個 `@`：
 
 ```plaintext
-@<GROUP> <SOURCE_HOST>=(<USER2>) <COMMAND>
+@{GROUP} {SOURCE_HOST}=(USER2) {COMMAND}
 ```
 
 > [!Note]
@@ -121,13 +121,13 @@ sudo echo hello > myfile
 
 ### Options
 
-若加上 `-u <USERNAME>`，會先取得指定 user 的權限，再執行指令，比如：
+若加上 `-u {USERNAME}`，會先取得指定 user 的權限，再執行指令，比如：
 
 ```bash
 sudo -u hello ls
 ```
 
-若加上 `-g <GROUP>`，會先取的指定 group 的權限，再執行指令，比如：
+若加上 `-g {GROUP}`，會先取的指定 group 的權限，再執行指令，比如：
 
 ```bash
 sudo -g admin ls
@@ -153,15 +153,15 @@ sudo su hello -
 
 ### 使用 `useradd` 新增 User
 
-```sh
-useradd [<OPTIONS>] <USERNAME>
+```bash
+useradd [{OPTIONS}] {USERNAME}
 ```
 
 ##### Options
 
-- `-g <MAIN_GROUP>`：指定 `<USERNAME>` 所屬的主要群組
-- `-G <ADDITIONAL_GROUP>`：指定 `<USERNAME>` 所屬的其它附加群組
-- `-e <DATE>`：指定 `<USERNAME>`  的使用期限
+- `-g {MAIN_GROUP}`：指定 `{USERNAME}` 所屬的主要群組
+- `-G {ADDITIONAL_GROUP}`：指定 `{USERNAME}` 所屬的其它附加群組
+- `-e {DATE}`：指定 `{USERNAME}`  的使用期限
 
 e.g.
 
@@ -174,22 +174,22 @@ useradd -g enginners -G managers -e 2050-12-31 jamison
 > [!Note]
 > 設定完密碼才算正式啟用 user。
 
-```sh
-passwd <USERNAME>
+```bash
+passwd {USERNAME}
 ```
 
 ### 使用 `userdel` 刪除 User
 
-```sh
-userdel [-r] <USERNAME>
+```bash
+userdel [-r] {USERNAME}
 ```
 
 加上 `-r` option 代表要連同使用者的目錄一起刪除。
 
 ### 使用 `usermod` 修改 User
 
-```sh
-usermod <OPTIONS> <USERNAME>
+```bash
+usermod {OPTIONS} {USERNAME}
 ```
 
 Option 與新增時一樣有 `-g`、`-G`、`-e`，範例如下：
@@ -202,11 +202,11 @@ usermod -g accountant jamison
 
 - **查詢指定 user 的詳細資訊**
 
-    ```sh
-    id [<USERNAME>]
+    ```bash
+    id [{USERNAME}]
     ```
 
-    若不輸入 `<USERNAME>` 則代表查詢目前登入的使用者。
+    若不輸入 `{USERNAME}` 則代表查詢目前登入的使用者。
 
     Example output:
 
@@ -216,28 +216,28 @@ usermod -g accountant jamison
 
 - **加上 `-u` option 查詢指定 user 的 username**
 
-    ```sh
-    id -u [-n|-r] [<USERNAME>]
+    ```bash
+    id -u [-n|-r] [{USERNAME}]
     ```
 
     `-u` 後面再加上 `-n` option 就是 stdout 指定 user 的 username；加上 `-r` option 則是 stdout 指定 user 的「編號」。
 
 - **加上 `-g` option 查詢指定 user 所屬的主要群組**
 
-    ```sh
-    id -g [-n|-r] [<USERNAME>]
+    ```bash
+    id -g [-n|-r] [{USERNAME}]
     ```
 
 - **加上 `-G` option 查詢指定 user 所屬的附加群組**
 
-    ```sh
-    id -G [-n|-r] [<USERNAME>]
+    ```bash
+    id -G [-n|-r] [{USERNAME}]
     ```
 
     使用 `groups` 也可以查詢所屬的附加群組：
 
-    ```sh
-    groups [<USERNAME>]
+    ```bash
+    groups [{USERNAME}]
     ```
 
 ### 列出所有 Users
