--- a/Operating System/Shell/其它常用指令 & 快捷鍵.md
+++ b/Operating System/Shell/其它常用指令 & 快捷鍵.md
@@ -1,6 +1,6 @@
-#Command 
+#Command
 
-### `man <COMMAND>`
+### `man {COMMAND}`
 
 顯示指定指令的使用說明 (manual)。
 
@@ -27,11 +27,11 @@
 
 顯示目前時間。
 
-### `exit [<EXIT_CODE>]`
+### `exit [{EXIT_CODE}]`
 
 以指定的 [[Operating System/Shell/1 - Introduction#Exit Codes|exit code]] 離開目前的 shell session，exit code 預設為 0。
 
-### `echo <STR>`
+### `echo {STR}`
 
 Stdout 指定字串。
 
@@ -47,13 +47,13 @@ echo "hello world"
     - 使用 `""` 將字串包起來，比如 `echo "hello world"`
     - 在每個空格前方加上 `\`，讓空格變成跳脫字元，比如 `echo hello\ world`
 
-### `history [<OPTIONS>]`
+### `history [{OPTIONS}]`
 
 搭配不同 options 可以達到不同效果，比如：
 
 - `-p`：清除過去執行過的指令的歷史紀錄
 
-### `pbcopy < <FILE>`
+### `pbcopy < {FILE}`
 
 將檔案的內容複製到剪貼簿。
 
@@ -61,9 +61,9 @@ echo "hello world"
 
 這個指令中使用到 `<` operator，這個動作稱為 [[3 - Operators#Input Redirection - `<`|input redirection]]。
 
-### `shred [<OPTIONS>] <FILE>`
+### `shred [{OPTIONS}] {FILE}`
 
-#TODO 
+#TODO
 
 ### `awk`
 
@@ -71,7 +71,7 @@ echo "hello world"
 
 ### `sed`
 
-#TODO 
+#TODO
 
 ### 🔥 Reload Shell
 
@@ -81,23 +81,23 @@ exec "$SHELL"
 
 改動 shell 的設定檔後，可以使用這個指令取代手動關掉 shell 再打開的動作。
 
-### `time <SCRIPT_FILE>`
+### `time {SCRIPT_FILE}`
 
 執行指定的 shell script file 並計算其執行時間，最後印出執行時間與 CPU 使用量。
 
 ### 清空某個檔案的內容
 
 ```bash
-> YOUR_FILE
+> {YOUR_FILE}
 ```
 
 ### `systemctl` & `service`
 
-#TODO 
+#TODO
 
 ### `timedatectl`
 
-#TODO 
+#TODO
 
 # 快捷鍵
 
