--- a/Operating System/Shell/與檔案壓縮、打包相關的指令.md
+++ b/Operating System/Shell/與檔案壓縮、打包相關的指令.md
@@ -1,4 +1,4 @@
-#Command 
+#Command
 
 以文字檔為例，現今的文字檔常見的是以 [[Character Encoding & Decoding#UTF-8|UTF-8]] 編碼，一個 character 會佔用到 2 bytes 甚至 3 bytes，然而一個 ASCII character 的大小其實只有 1 byte，因此一個 UTF-8 編碼文字檔中，ASCII character 的開頭會有很多個 `0` (leading zeros)，這樣其實很浪費空間。
 
@@ -30,7 +30,7 @@ Data Compression (Source Coding, or Bit-Rate Reduction) 的演算法有很多（
 ### 壓縮
 
 ```bash
-compress [<OPTIONS>] <FILE> [<FILE> ...]
+compress [{OPTIONS}] {FILE} [{FILE} ...]
 ```
 
 `compress` 壓縮出來的檔案會直接取代掉原本的檔案，換句話說，原本的檔案壓完後就消失了。
@@ -47,9 +47,9 @@ compress [<OPTIONS>] <FILE> [<FILE> ...]
 ### 解壓縮
 
 ```bash
-compress -d <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
+compress -d {FILE_COMPRESSED} [{FILE_COMPRESSED} ...]
 # or
-uncompress <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
+uncompress {FILE_COMPRESSED} [{FILE_COMPRESSED} ...]
 ```
 
 使用 `compress -d` 時可以不用寫出 file extension (`.Z`)；但使用 `uncompress` 就一定要寫 file extension。
@@ -61,7 +61,7 @@ uncompress <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
 ### 壓縮
 
 ```bash
-gzip [<OPTIONS>] <FILE> [<FILE> ...]
+gzip [{OPTIONS}] {FILE} [{FILE} ...]
 ```
 
 `gzip` 壓縮檔案時預設的行為也是會用壓縮檔取代掉原本的檔案，但可以用 option `-k` 調整這個行為。
@@ -72,18 +72,18 @@ gzip [<OPTIONS>] <FILE> [<FILE> ...]
 - `-c`：直接 stdout 壓縮後的結果，不將壓縮結果存進檔案
 - `-d`：解壓縮
 - `-k`：保留原檔案，將壓縮過的檔案另存
-- `-S <SUFFIX>`：指定壓縮後檔案的 file extension
+- `-S {SUFFIX}`：指定壓縮後檔案的 file extension
 - `-v`：將壓縮的結果 stdout，包括壓縮比等
 
 ### 解壓縮
 
 ```bash
-gzip -d <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
+gzip -d {FILE_COMPRESSED} [{FILE_COMPRESSED} ...]
 # or
-gunzip <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
+gunzip {FILE_COMPRESSED} [{FILE_COMPRESSED} ...]
 ```
 
-`<FILE_COMPRESSED>` 的 file extension 可加可不加。
+`{FILE_COMPRESSED}` 的 file extension 可加可不加。
 
 # `bzip2`
 
@@ -92,7 +92,7 @@ gunzip <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
 ### 壓縮
 
 ```bash
-bzip2 [<OPTIONS>] <FILE> [<FILE> ...]
+bzip2 [{OPTIONS}] {FILE} [{FILE} ...]
 ```
 
 `bzip2` 壓縮檔案時預設的行為也是會用壓縮檔取代掉原本的檔案，但可以用 option `-k` 調整這個行為。
@@ -102,28 +102,28 @@ bzip2 [<OPTIONS>] <FILE> [<FILE> ...]
 ### 解壓縮
 
 ```bash
-bzip2 -d <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
+bzip2 -d {FILE_COMPRESSED} [{FILE_COMPRESSED} ...]
 # or
-bunzip2 <FILE_COMPRESSED> [<FILE_COMPRESSED> ...]
+bunzip2 {FILE_COMPRESSED} [{FILE_COMPRESSED} ...]
 ```
 
-與 `gzip` 不同的是，兩種方法的 `<FILE_COMPRESSED>` 都必須包含 file extension。
+與 `gzip` 不同的是，兩種方法的 `{FILE_COMPRESSED}` 都必須包含 file extension。
 
 # `zcat` & `bzcat`
 
 如果只是想 peek 解壓縮之後的內容，並不想實際解壓縮檔案並將其存檔，可以使用 `zcat` 或 `bzcat`：
 
 ```bash
-zcat <FILE_COMPRESSED>
+zcat {FILE_COMPRESSED}
 # or
-bzcat <FILE_COMPRESSED>
+bzcat {FILE_COMPRESSED}
 ```
 
-其中 `zcat` 的 `<FILE_COMPRESSED>` 不用加 file extension，但 `bzcat` 的 `<FILE_COMPRESSED>` 要加 file extension。
+其中 `zcat` 的 `{FILE_COMPRESSED}` 不用加 file extension，但 `bzcat` 的 `{FILE_COMPRESSED}` 要加 file extension。
 
 > [!Note]
 > `zcat` 只能解讀 file extension 為 `.Z` 的檔案，但並不一定要是 `compress` 壓出來的，也就是說你可以用其他指令壓縮檔案然後把 file extension 改為 `.Z`，這樣就可以用 `zcat` 解讀了。
-> 
+>
 > 同樣地，`bzcat` 只能解讀 file extension 為 `.bz2` 的檔案，但並不一定要是 `bzip2` 壓出來的。
 
 # `tar`
@@ -133,10 +133,10 @@ bzcat <FILE_COMPRESSED>
 ### 打包
 
 ```bash
-tar -cf <A> <B> [<C> ...]
+tar -cf {A} {B} [{C} ...]
 ```
 
-將所有 `<B> [<C> ...]` 打包成一個叫做 `<A>` 的檔案，通常 `<A>` 會以 `.tar` 做為 file extension。
+將所有 `{B} [{C} ...]` 打包成一個叫做 `{A}` 的檔案，通常 `{A}` 會以 `.tar` 做為 file extension。
 
 指令中的 `-c` option 用來打包，`-f` option 用來表示接著要開始輸入檔案名稱（`-f` 一定要放在所有 options 的最後面）。
 
@@ -145,20 +145,20 @@ tar -cf <A> <B> [<C> ...]
 ### 打包並壓縮
 
 ```bash
-tar -czf <A> <B> [<C> ...]
+tar -czf {A} {B} [{C} ...]
 ```
 
-將所有 `<B> [<C> ...]` 打包並壓縮成一個叫做 `<A>` 的檔案，這裡使用的壓縮方法其實就是 `gzip`，也因此通常 `<A>` 會以 `.tar.gz` 做為 file extension。
+將所有 `{B} [{C} ...]` 打包並壓縮成一個叫做 `{A}` 的檔案，這裡使用的壓縮方法其實就是 `gzip`，也因此通常 `{A}` 會以 `.tar.gz` 做為 file extension。
 
 指令中的 `-z` option 用來壓縮。
 
 ### 拆封與解壓縮
 
 ```bash
-tar -xvf <BUNDLE_FILE>
+tar -xvf {BUNDLE_FILE}
 ```
 
-`<BUNDLE_FILE>` 必須有 file extension，若是一個打包且壓縮過的檔案，則先將其解壓縮再拆封；若只是一個打包的檔案，則直接將其拆封。
+`{BUNDLE_FILE}` 必須有 file extension，若是一個打包且壓縮過的檔案，則先將其解壓縮再拆封；若只是一個打包的檔案，則直接將其拆封。
 
 指令中的 `-x` option 代表解壓縮與拆封，`-v` option 代表將過程 stdout。
 
