--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -1,4 +1,4 @@
-#Command 
+#Command
 
 # `ifconfig`
 
@@ -54,11 +54,11 @@ en0: flags=8863<UP,BROADCAST,SMART,RUNNING,SIMPLEX,MULTICAST> mtu 1500
 >[!Note]
 >關於 local IP address 與 public IP address 的差異，請看[[IP & IP Address|這篇]]。
 
-# `curl <URL>`
+# `curl {URL}`
 
 `curl` 可以用來傳送資料給 server 以及接收從 server 來的資料，其支援包含 FILE, FTP, FTPS, HTTP, HTTPS, WS, WSS… 等幾乎所有你想得到的 protocols，是一個非常全面的指令。
 
-`<URL>` 前面若沒加 protocol，`curl` 就會根據 `<URL>` 猜測最有可能的 protocol（通常是`http`）然後幫你加上去，例如：
+`{URL}` 前面若沒加 protocol，`curl` 就會根據 `{URL}` 猜測最有可能的 protocol（通常是`http`）然後幫你加上去，例如：
 
 ```bash
 curl www.google.com  # will become "http://www.google.com"
@@ -80,17 +80,17 @@ curl "http://example.com/file[1-10].txt"
 curl "http://example.com/file[a-z:2].txt"
 ```
 
-請記得，使用這些花式的 URL 時，`<URL>` 的外面要用 `" "` 包住。
+請記得，使用這些花式的 URL 時，`{URL}` 的外面要用 `" "` 包住。
 
 ### 下載檔案（將 Response 寫入 Disk）
 
-使用 `-o <LOCAL_FILE_NAME>` 或 `--output <LOCAL_FILE_NAME>` option，即可指定將 response 寫成檔案並命名為 `<LOCAL_FILE_NAME>`：
+使用 `-o {LOCAL_FILE_NAME}` 或 `--output {LOCAL_FILE_NAME}` option，即可指定將 response 寫成檔案並命名為 `{LOCAL_FILE_NAME}`：
 
 ```bash
 curl -o my_file https://example.com
 ```
 
-如果搭配連發 requests 的操作，則可以在 `<LOCAL_FILE_NAME>` 中用變數 `#1`, `#2`, … 來代表第一區塊、第二區塊… 現在迭代到的 string：
+如果搭配連發 requests 的操作，則可以在 `{LOCAL_FILE_NAME}` 中用變數 `#1`, `#2`, … 來代表第一區塊、第二區塊… 現在迭代到的 string：
 
 ```bash
 curl "http://{site,host}.host[1-5].com" -o "#1_#2"
@@ -98,7 +98,7 @@ curl "http://{site,host}.host[1-5].com" -o "#1_#2"
 
 這樣一來 file name 就會是 site_1 ~ site_5, host_1 ~ host_5。
 
-如果不想特別想檔案名稱，而是想直接採用檔案在 server 的名字，則可以使用 `-O <URL>`（大寫）或 `--remote-name <URL>`：
+如果不想特別想檔案名稱，而是想直接採用檔案在 server 的名字，則可以使用 `-O {URL}`（大寫）或 `--remote-name {URL}`：
 
 ```bash
 curl -O https://example.com/filename.txt
@@ -107,7 +107,7 @@ curl -O https://example.com/filename.txt
 
 ### 上傳檔案
 
-使用 `-T <FILE_NAME>` 或 `--upload-file <FILE_NAME>` 來上傳檔案到 server，也可以搭配 `{}` 以及 `[]` 連續上傳多個檔案：
+使用 `-T {FILE_NAME}` 或 `--upload-file {FILE_NAME}` 來上傳檔案到 server，也可以搭配 `{}` 以及 `[]` 連續上傳多個檔案：
 
 ```bash
 curl -T "img[1-1000].png" ftp://ftp.example.com/
@@ -117,21 +117,19 @@ curl -T "img[1-1000].png" ftp://ftp.example.com/
 
 # `wget`
 
-```sh
-wget [<OPTIONS>] <URL> [<URL2> ...]
+```bash
+wget [{OPTIONS}] {URL} [{URL2} ...]
 ```
 
 `wget` 可以說是 `curl` 的閹割版，但針對「下載資料」提供了比 `curl` 更多的 options 以及更 reliable 的下載服務。
 
-efg `efg`
-
 ### 常用 Options
 
-- `-O <LOCAL_FILE_NAME>` 指定下載後的檔名
+- `-O {LOCAL_FILE_NAME}` 指定下載後的檔名
 
     請注意在 `curl` 中是使用 `-o`，但在 `wget` 是使用 `-O`。
 
-- `-i <URL_LIST_FILE_NAME>` 匯入 URL 名單
+- `-i {URL_LIST_FILE_NAME}` 匯入 URL 名單
 
     比如你可以將所有想下載的檔案來源條列在一個叫 `urls.txt` 的檔案中，然後使用 `wget -i ./urls.txt` 一次下載所有檔案。
 
@@ -139,9 +137,9 @@ efg `efg`
 
     當所處環境的網路不穩定時，有可能東西下載到一半突然斷線，如果想要在恢復連線後接著從上次停下來的地方繼續而不要從頭下載一個新的，那就可以加上這個 option。
 
-- `-b <LOG_FILE_NAME>` 背景下載
+- `-b {LOG_FILE_NAME}` 背景下載
 
-    需要一個 `<LOG_FILE_NAME>` 的原因是因為要將下載過程中原本要 stdout 的東西改為寫入檔案。
+    需要一個 `{LOG_FILE_NAME}` 的原因是因為要將下載過程中原本要 stdout 的東西改為寫入檔案。
 
 - 帶上使用者帳號密碼
 
@@ -153,7 +151,7 @@ efg `efg`
     wget --ftp-user=my_user --ftp-password=my_password ftp://ftp.example.com/my_file
     ```
 
-- `--user-agent="<USER_AGENT>"` 偽裝為瀏覽器
+- `--user-agent="{USER_AGENT}"` 偽裝為瀏覽器
 
     正常使用 `wget` 時下載檔案時，其 user agent 會顯示 `wget` 的版本資訊：
 
@@ -162,7 +160,7 @@ efg `efg`
     ```
 
     若想要偽裝成瀏覽器，則可以這麼做：
-    
+
     ```bash
     wget --user-agent="Mozilla/5.0 (Windows NT 6.1; Trident/7.0; rv:11.0) like Gecko" https://example.com/example.txt
     ```
@@ -180,7 +178,7 @@ wget --mirror -p --convert-links -P ./my_folder https://example.com/
 - `--mirror`：下載整個網站
 - `-p`：下載顯示網頁所需要的所有相關檔案
 - `--convert-links`：將下載網頁中的超連結，轉換為 local directory 中的位置
-- `-P <DIR>`：將下載的檔案放在 `<DIR>` 目錄下
+- `-P {DIR}`：將下載的檔案放在 `{DIR}` 目錄下
 
 ### 參考資料
 
@@ -257,10 +255,10 @@ en0        1500  192.168.50    192.168.50.87   72801125     - 17626450
 
 - <https://blog.gtwang.org/linux/linux-netstat-command-examples/>
 
-# `ping <HOST>`
+# `ping {HOST}`
 
 - `ping` 使用 [[ICMP]] 來確認 destination host 是否可以在網路上被找到，因此 ==ping 成功只能代表 network routing 沒問題，並不代表該 host 可以正常提供服務==
-- `<HOST>` 的部分可以填入 IP address 或 domain，但不可加上 protocol、path、port、query string 等額外資訊
+- `{HOST}` 的部分可以填入 IP address 或 domain，但不可加上 protocol、path、port、query string 等額外資訊
 - Destination host 收到 ping 後會回覆，這個回覆被稱為 pong
 
 e.g.
@@ -282,7 +280,7 @@ PING www.google.com (142.251.42.228): 56 data bytes
 round-trip min/avg/max/stddev = 6.555/10.582/14.924/3.915 ms
 ```
 
-# `traceroute <HOST>`
+# `traceroute {HOST}`
 
 `traceroute` 使用 [[ICMP]] 來取得自己到 destination host 的路徑（會經過哪些 routers）以及花費的時間。
 
@@ -348,9 +346,9 @@ Example output:
 router.asus.com (192.168.50.1) at 24:4b:fe:35:13:7c on en0 ifscope [ethernet]
 ```
 
-# `dig <DOMAIN>`
+# `dig {DOMAIN}`
 
-- 查詢 `<DOMAIN>` 的 IP addresses (進行 [[DNS#DNS Lookup|DNS lookup]])
+- 查詢 `{DOMAIN}` 的 IP addresses (進行 [[DNS#DNS Lookup|DNS lookup]])
 - `+short` option 可以讓輸出更為簡潔（只保留 IP address 的部分）
 
 e.g.
