--- a/Operating System/Shell/與「搜尋」相關的指令.md
+++ b/Operating System/Shell/與「搜尋」相關的指令.md
@@ -1,11 +1,11 @@
-#Command 
+#Command
 
 # 使用 `which` 搜尋執行檔
 
 這個指令用來搜尋指定執行檔的位置，但只會從[[Operating System/Shell/1 - Introduction#PATH|環境變數 PATH]] 中搜尋。
 
-```sh
-which [<OPTIONS>] <EXECUTABLE>
+```bash
+which [{OPTIONS}] {EXECUTABLE}
 ```
 
 e.g.
@@ -40,8 +40,8 @@ ls -l $(which python)
 
 這個指令用來搜尋另一個指令的 binary、source 以及 manual page，但只會從環境變數 `PATH` 中搜尋。
 
-```sh
-whereis [<OPTIONS>] <COMMAND>
+```bash
+whereis [{OPTIONS}] {COMMAND}
 ```
 
 e.g.
@@ -53,11 +53,11 @@ whereis openssl
 
 # 使用 `find` 搜尋各式檔案
 
-```sh
-find <ROOT_PATH> [<OPTION> <VALUE>]
+```bash
+find {ROOT_PATH} [{OPTION} {VALUE}]
 ```
 
-這個指令會 recursively 搜尋 `<ROOT_PATH>` 底下的所有 subdirectories。
+這個指令會 recursively 搜尋 `{ROOT_PATH}` 底下的所有 subdirectories。
 
 e.g.
 
@@ -91,18 +91,18 @@ Option 為 `-type` 時，value 可以有以下值：
 
 找到 input string 中所有包含欲搜尋字詞的行 (line)，並將這些 lines stdout。
 
-```sh
-grep [<OPTIONS>] '<PATTERN>' <FILE> [<FILE2> ...]
+```bash
+grep [{OPTIONS}] '{PATTERN}' {FILE} [{FILE2} ...]
 ```
 
 ### 常用 Options
 
 - `-c`：只 stdout 欲搜尋字詞出現的次數
-- `-E <PATTERN>` (`--extended-regexp`)：使用 extended regexp 搜尋
+- `-E {PATTERN}` (`--extended-regexp`)：使用 extended regexp 搜尋
 - `-i`：case insensitive
 - `-l`：只 stdout 包含欲搜尋字詞的檔案名稱
 - `-q`：Quite mode，若有搜尋到指定文字，則直接 exit，不 stdout
-- `-r`：若 `<FILE>` 是一個 directory 而不是檔案，則不加 `-r` 會報錯；但加了 `-r` 就變成搜尋指定 directory 中的所有檔案
+- `-r`：若 `{FILE}` 是一個 directory 而不是檔案，則不加 `-r` 會報錯；但加了 `-r` 就變成搜尋指定 directory 中的所有檔案
 - `-v` (`--invert-match`)：改為搜尋「不」包含指定字詞的部分
 
 ### Examples
@@ -112,7 +112,6 @@ grep [<OPTIONS>] '<PATTERN>' <FILE> [<FILE2> ...]
     ```bash
     grep 'dev' ./test.py
     ```
-
 
 - Stdout 目前 directory 底下的所有檔案中，所有包含 "hi" 的 lines：
 
