--- a/Database/PostgreSQL/3 - 資料型態.md
+++ b/Database/PostgreSQL/3 - 資料型態.md
@@ -12,9 +12,7 @@
 |`date`||calendar date (year, month, day)|
 |`double precision`|`float8`|double precision floating-point number (8 bytes)|
 |`integer`|`int`, `int4`|signed four-byte integer|
-|`interval [{f}] [{p}]`||time span|
 |`json`||textual JSON data|
-|`jsonb`||binary JSON data, decomposed|
 |`numeric[({p}, {s})]`|`decimal[({p}, {s})]`|exact numeric of selectable precision|
 |`real`|`float4`|single precision floating-point number (4 bytes)|
 |`smallint`|`int2`|signed two-byte integer|
@@ -26,7 +24,6 @@
 |`timestamp[({p})] [without time zone]`||date and time (no time zone)|
 |`timestamp[({p})] with time zone`|`timestamptz`|date and time, including time zone|
 |`uuid`||universally unique identifier|
-|`xml`||XML data|
 
 ### `CHAR(n)` vs. `VARCHAR(n)` vs. `TEXT`
 
@@ -51,6 +48,6 @@ ALTER TABLE customer
 ALTER COLUMN gender TYPE gender_type USING gender::gender_type;
 ```
 
-# 其它相關文章
+# 延伸閱讀
 
 - [[numeric vs real vs double precision]]
