--- a/Operating System/Shell/6 - 與使用者、群組相關的指令.md
+++ b/Operating System/Shell/6 - 與使用者、群組相關的指令.md
@@ -14,19 +14,19 @@
 su
 ```
 
-輸入指令後會被要求輸入 `root` user 的密碼，輸入正確後會進入一個新的 shell（屬於當前 shell 的 [[Operating System/Shell/1 - Introduction#Sub-Shell|sub-shell]]）。
+輸入指令後會被要求輸入 `root` user 的密碼，輸入正確後會進入一個新的 Shell（屬於當前 Shell 的 [[Operating System/Shell/1 - Introduction#Sub-Shell|sub-Shell]]）。
 
-但光使用 `su` 並不會讓[[Operating System/Shell/1 - Introduction#Environment Variable|環境變數]]跟著變，讀取的 shell 設定檔也還是原本 user 的 home directory 底下的設定檔，只是有了 `root` 的權限而已，如果要讓環境變數也變成 `root` 的，須在指令中加一個 `-`：
+但光使用 `su` 並不會讓[[Operating System/Shell/1 - Introduction#Environment Variable|環境變數]]跟著變，讀取的 Shell 設定檔也還是原本 user 的 home directory 底下的設定檔，只是有了 `root` 的權限而已，如果要讓環境變數也變成 `root` 的，須在指令中加一個 `-`：
 
 ```bash
 su -
 ```
 
-`su -` 進入 shell 的效果就和使用 `root` 登入系統並進入 shell 一樣。
+`su -` 進入 Shell 的效果就和使用 `root` 登入系統並進入 Shell 一樣。
 
 ---
 
-如果切換為 `root` 後只要簡單執行一個指令便離開 root shell，可以使用 `-c` option，例如：
+如果切換為 `root` 後只要簡單執行一個指令便離開 root Shell，可以使用 `-c` option，例如：
 
 ```bash
 su - -c "ls"
@@ -40,7 +40,7 @@ su - -c "ls"
 su {USERNAME}
 ```
 
-此時要輸入的密碼是 `{USERNAME}` 的密碼，不過如果已經以 `root` 身份登入（在 `root` 的 shell 中），則不用另外輸入密碼。
+此時要輸入的密碼是 `{USERNAME}` 的密碼，不過如果已經以 `root` 身份登入（在 `root` 的 Shell 中），則不用另外輸入密碼。
 
 # `sudo`
 
@@ -62,23 +62,23 @@ sudo ls
 sudo echo hello > myfile
 ```
 
-上面這個指令的意思是「先以 `root` 的身份執行 `echo hello` 這個指令，再回到原使用者的身份將 `echo` 的輸出寫入 myfile 這個檔案」，所以若原使用者沒有 myfile 的 write 權限，shell 就會顯示錯誤訊息 Permission denied。
+上面這個指令的意思是「先以 `root` 的身份執行 `echo hello` 這個指令，再回到原使用者的身份將 `echo` 的輸出寫入 myfile 這個檔案」，所以若原使用者沒有 myfile 的 write 權限，Shell 就會顯示錯誤訊息 Permission denied。
 
 以上面這個情境來說，有兩種解決方法：
 
-- 法一：先切到新 shell session
+- 法一：先切到新 Shell session
 
     ```bash
-    # Enter a new shell session
+    # Enter a new Shell session
     sudo su
     
     # Enter the password of the current user.
     
-    # In the new shell session
+    # In the new Shell session
     echo hello > myfile
     ```
 
-- 法二：不切到新的 shell session
+- 法二：不切到新的 Shell session
 
     ```bash
     echo hello | sudo tee myfile
@@ -136,16 +136,16 @@ sudo -g admin ls
 ### `sudo` + `su`
 
 ```bash
-# 透過 root 取得 root 的權限，並開啟新的 shell session
+# 透過 root 取得 root 的權限，並開啟新的 Shell session
 sudo su
 
-# 透過 root 取得 root 的權限與環境變數，並開啟新的 shell session
+# 透過 root 取得 root 的權限與環境變數，並開啟新的 Shell session
 sudo su -
 
-# 透過 root 取得 user "hello" 的權限，並開啟新的 shell session
+# 透過 root 取得 user "hello" 的權限，並開啟新的 Shell session
 sudo su hello
 
-# 透過 root 取得 user "hello" 的權限與環境變數，並開啟新的 shell session
+# 透過 root 取得 user "hello" 的權限與環境變數，並開啟新的 Shell session
 sudo su hello -
 ```
 
