--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -82,7 +82,7 @@ curl "http://example.com/file[a-z:2].txt"
 
 請記得，使用這些花式的 URL 時，`{URL}` 的外面要用 `" "` 包住。
 
-### 下載檔案（將 Response 寫入 Disk）
+### 下載檔案
 
 使用 `-o {LOCAL_FILE_NAME}` 或 `--output {LOCAL_FILE_NAME}` option，即可指定將 response 寫成檔案並命名為 `{LOCAL_FILE_NAME}`：
 
@@ -334,7 +334,7 @@ Destination     Gateway         Genmask         Flags Metric Ref    
 
 # `arp`
 
-### 查詢本機的 ARP Table
+### 查詢本機的 [[MAC Address & ARP#ARP Table|ARP Table]]
 
 ```bash
 arp -a
@@ -349,7 +349,7 @@ router.asus.com (192.168.50.1) at 24:4b:fe:35:13:7c on en0 ifscope [ethernet]
 # `dig {DOMAIN}`
 
 - 查詢 `{DOMAIN}` 的 IP addresses (進行 [[DNS#DNS Lookup|DNS lookup]])
-- `+short` option 可以讓輸出更為簡潔（只保留 IP address 的部分）
+- `+short` option 可以讓輸出更為簡潔（只保留 IPv4 address 的部分）
 
 e.g.
 
@@ -366,4 +366,69 @@ Output:
 74.125.24.105
 74.125.24.106
 74.125.24.103
+```
+
+# `nc`
+
+`nc` 是一個全名為 [Netcat](https://netcat.sourceforge.net/) 的網路狀態檢查工具，可以用來發送、監聽 [[OSI Model.draft#Transport Layer (Layer 4)|transport layer (L4)]] 的網路封包。
+
+**常用的 Options**
+
+- `-l`：監聽指定 socket，沒給這個參數的話就是「發送」封包至該 socket
+- `-u`：使用 UDP，沒給這個參數的話預設是用 TCP
+- `-U`：聲明將使用 [[Socket & Port#Unix Domain Socket|Unix Domain Socket]]
+- `-v`：give more verbose output
+- `-w {n}`：connect + read 最多等 `{n}` 秒。不能與 `-l` 併用。
+
+### 測試指定 Socket 是否開啟
+
+```bash
+nc -v {IP_ADDRESS} {PORT}
+```
+
+因為使用 `-v`，所以連線成功時會有提示：
+
+```bash
+Connection to 142.251.12.147 port 80 [tcp/http] succeeded!
+```
+
+### 發送訊息、傳送檔案
+
+```bash
+# sending plaintext message
+echo {MESSAGE} | nc {IP_ADDRESS} {PORT}
+
+# sending file
+nc {IP_ADDRESS} {PORT} < {FILE}
+```
+
+### 監聽本機的指定 Socket
+
+```bash
+nc -l localhost {PORT}
+# or
+nc -l localhost {UNIX_DOMAIN_SOCKET}
+```
+
+這個指令在收到第一個 TCP 封包後就會關閉（有加 `-u` 的話就是收到第一個 UDP 封包後關閉），如果想要持續監聽，須搭配 `while true` 使用，比如：
+
+```bash
+while true; do nc -l localhost 8000; done
+```
+
+也可以在每次收到封包時都回覆一些文字，甚至一個檔案，比如：
+
+```bash
+while true; do echo "hello" | nc -l localhost 8000; done
+# or
+while true; do nc -l localhost 8000 < index.html; done
+```
+
+>[!Note]
+>`nc` 是 L4 的指令，並不會為送出的 response 封包加上 HTTP header，但大部分瀏覽器只看得懂 HTTP 封包，所以這類瀏覽器會無法順利解析 `nc` 所回覆得內容。
+
+當有封包送進指定的 socket 時，封包的內容會被導入 stdout，所以我們可以 redirect stdout，將內容寫成檔案，比如：
+
+```bash
+nc -l localhost 8000 > output.txt
 ```
