--- a/Web Development/Backend Frameworks/熱門的後端框架.md
+++ b/Web Development/Backend Frameworks/熱門的後端框架.md
@@ -2,22 +2,27 @@
 
 # Python
 
+Flask、FastAPI 與 Django 為三個社群最活躍的框架：
+
 ##### [Flask](https://flask.palletsprojects.com/)
 
 - 適合小型專案
 - 容易入門
+- 支援 [[Backend Web Architecture#WSGI/ASGI Server|WSGI]]，不支援 ASGI
 
 ##### [FastAPI](https://fastapi.tiangolo.com/)
 
-- 快
+- 效能最好
+- 支援 WSGI 與 ASGI
 - 使用 [[Type Hints]] 就可以達到資料驗證的效果
+- 可以自動化生成 [[OAS.canvas|OAS]] 文件
 
 ##### [Django](https://www.djangoproject.com/)
 
 - 適合中大型專案
-- 適合做 full-stack project
-- 功能完整，包括內建的 [[ORM.canvas|ORM]]、authentication mechanism、template engine、admin GUI
-- 社群活躍
+- 可以用來做 full-stack project
+- 支援 WSGI 與 ASGI
+- 功能最完整，包括內建的 [[ORM.canvas|ORM]]、authentication mechanism、template engine、admin GUI
 
 # JavaScript
 
