--- a/Operating System/Shell/其它常用指令 & 快捷鍵.md
+++ b/Operating System/Shell/其它常用指令 & 快捷鍵.md
@@ -29,7 +29,7 @@
 
 ### `exit [{EXIT_CODE}]`
 
-以指定的 [[Operating System/Shell/1 - Introduction#Exit Codes|exit code]] 離開目前的 shell session，exit code 預設為 0。
+以指定的 [[Operating System/Shell/1 - Introduction#Exit Codes|exit code]] 離開目前的 Shell session，exit code 預設為 0。
 
 ### `echo {STR}`
 
@@ -79,11 +79,11 @@ echo "hello world"
 exec "$SHELL"
 ```
 
-改動 shell 的設定檔後，可以使用這個指令取代手動關掉 shell 再打開的動作。
+改動 Shell 的設定檔後，可以使用這個指令取代手動關掉 Shell 再打開的動作。
 
 ### `time {SCRIPT_FILE}`
 
-執行指定的 shell script file 並計算其執行時間，最後印出執行時間與 CPU 使用量。
+執行指定的 Shell script file 並計算其執行時間，最後印出執行時間與 CPU 使用量。
 
 ### 清空某個檔案的內容
 
@@ -91,7 +91,7 @@ exec "$SHELL"
 > {YOUR_FILE}
 ```
 
-### `systemctl` & `service`
+### `systemctl` & `services`
 
 #TODO
 
@@ -106,10 +106,10 @@ exec "$SHELL"
 |方向鍵 ↑|顯示上一次輸入的指令|
 |`Tab`|自動補齊未打完的 command/directory/file 名稱|
 |`Control` + `c`|送出 `SIGINT` 訊號，打斷目前 terminal 前景執行中的指令|
-|`Control` + `d`|送出 `EOF` 訊號。<br/>若本來在 input mode 則離開 input mode<br/>若本來在 shell 則離開 shell session（效果同 `exit` 指令）|
+|`Control` + `d`|送出 `EOF` 訊號。<br/>若本來在 input mode 則離開 input mode<br/>若本來在 Shell 則離開 Shell session（效果同 `exit` 指令）|
 |`Control` + `l`|清空目前的 terminal|
 |`Control` + `w`|刪除游標前方的單字|
-|`Control` + `z`|將執行中的命令丟到背景執行|
+|`Control` + `z`|將執行中的指令暫停並丟到背景|
 |`Control` + `Shift` + `c`|複製文字|
 |`Control` + `Shift` + `v`|貼上文字|
 
