--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -123,7 +123,7 @@ wget [{OPTIONS}] {URL} [{URL2} ...]
 
 `wget` 可以說是 `curl` 的閹割版，但針對「下載資料」提供了比 `curl` 更多的 options 以及更 reliable 的下載服務。
 
-### 常用 Options
+**常用的 Options**
 
 - `-O {LOCAL_FILE_NAME}` 指定下載後的檔名
 
@@ -374,11 +374,13 @@ Output:
 
 **常用的 Options**
 
-- `-l`：監聽指定 socket，沒給這個參數的話就是「發送」封包至該 socket
-- `-u`：使用 UDP，沒給這個參數的話預設是用 TCP
-- `-U`：聲明將使用 [[Socket & Port#Unix Domain Socket|Unix Domain Socket]]
-- `-v`：give more verbose output
-- `-w {n}`：connect + read 最多等 `{n}` 秒。不能與 `-l` 併用。
+|Option|Description|
+|:-:|---|
+|`-l`|監聽指定 socket，沒給這個參數的話就是「發送」封包至該 socket|
+|`-u`|使用 UDP，沒給這個參數的話預設是用 TCP|
+|`-U`|聲明將使用 [[Socket & Port#Unix Domain Socket\|Unix Domain Socket]]|
+|`-v`|give more verbose output|
+|`-w {n}`|connect + read 最多等 `{n}` 秒。不能與 `-l` 併用。|
 
 ### 測試指定 Socket 是否開啟
 
