--- a/Operating System/Shell/6 - 與使用者、群組相關的指令.md
+++ b/Operating System/Shell/6 - 與使用者、群組相關的指令.md
@@ -8,7 +8,7 @@
 
 較好的做法是平時使用 non-root user 登入，有需要取得 `root` 才有的權限時，再行取得權限。
 
-### 取得 `root` 權限
+# 取得 `root` 權限
 
 ```bash
 su
@@ -32,7 +32,7 @@ su -
 su - -c "ls"
 ```
 
-### 取得其他 User 的權限
+# 取得其他 User 的權限
 
 `root` 又叫 superuser，是所有 user 的管理者，因此 `su` 指令也可以用來取得任何一個 user 的權限：
 
@@ -87,6 +87,19 @@ sudo echo hello > myfile
     - `tee [{FILE}]` 的功能是將 stdin 複製並送至 stdout，後面有放 file 則將 stdin 寫入 file
     - `sudo` 放在 `tee` 這邊
 
+**常用的 Options**
+
+|Option|Description|
+|---|---|
+|`-u {USERNAME}`|先取得指定 user 的權限，再執行指令|
+|`-g {GROUP}`|先取的指定 group 的權限，再執行指令|
+
+e.g.
+
+```bash
+sudo -u bob ls
+```
+
 ### `sudo` 與 `su` 的差別在於輸入的密碼
 
 - 使用 `su` 取得 user A 的權限時，須要輸入的 user A 的密碼
@@ -99,7 +112,7 @@ sudo echo hello > myfile
 當然不是，事實上 Linux 系統中使用了 `/etc` 底下的 `sudoers` 檔案來限制哪些 users 可以使用 `sudo`，檔案中的 pattern 如下：
 
 ```plaintext
-{USER1} {SOURCE_HOST}=(USER2) {COMMAND}
+{USER1} {SOURCE_HOST}=({USER2}) {COMMAND}
 ```
 
 這一行設定使得 `{USER1}` 可以從 `{SOURCE_HOST}` 登入 `{USER2}`，並且只能執行 `{COMMAND}` 這個指令。
@@ -119,20 +132,6 @@ sudo echo hello > myfile
 > [!Note]
 > `/etc/sudoers` 這個檔案只有具有 `root` 權限者可以修改，且若要修改，須使用 `visudo` 這個編輯器來修改，OS 會在編輯完成後自動檢查設定檔的語法是否正確，避免錯誤的語法導致 `sudo` 無法使用。
 
-### Options
-
-若加上 `-u {USERNAME}`，會先取得指定 user 的權限，再執行指令，比如：
-
-```bash
-sudo -u hello ls
-```
-
-若加上 `-g {GROUP}`，會先取的指定 group 的權限，再執行指令，比如：
-
-```bash
-sudo -g admin ls
-```
-
 ### `sudo` + `su`
 
 ```bash
@@ -142,43 +141,34 @@ sudo su
 # 透過 root 取得 root 的權限與環境變數，並開啟新的 Shell session
 sudo su -
 
-# 透過 root 取得 user "hello" 的權限，並開啟新的 Shell session
-sudo su hello
+# 透過 root 取得 "bob" user 的權限，並開啟新的 Shell session
+sudo su bob
 
-# 透過 root 取得 user "hello" 的權限與環境變數，並開啟新的 Shell session
-sudo su hello -
+# 透過 root 取得 "bob" user 的權限與環境變數，並開啟新的 Shell session
+sudo su bob -
 ```
 
-# 新增／修改／刪除 User
-
-### 使用 `useradd` 新增 User
+# 新增 User
 
 ```bash
 useradd [{OPTIONS}] {USERNAME}
 ```
 
-##### Options
+**常用的 Options**
 
-- `-g {MAIN_GROUP}`：指定 `{USERNAME}` 所屬的主要群組
-- `-G {ADDITIONAL_GROUP}`：指定 `{USERNAME}` 所屬的其它附加群組
-- `-e {DATE}`：指定 `{USERNAME}`  的使用期限
+|Option|Description|
+|---|---|
+|`-g {MAIN_GROUP}`|指定 `{USERNAME}` 所屬的主要群組|
+|`-G {ADDITIONAL_GROUP}`|指定 `{USERNAME}` 所屬的其它附加群組|
+|`-e {DATE}`|指定 `{USERNAME}`  的使用期限|
 
 e.g.
 
 ```bash
-useradd -g enginners -G managers -e 2050-12-31 jamison
+useradd -g enginners -G managers -e 2050-12-31 bob
 ```
 
-##### 使用 `passwd` 設定 User 的密碼
-
-> [!Note]
-> 設定完密碼才算正式啟用 user。
-
-```bash
-passwd {USERNAME}
-```
-
-### 使用 `userdel` 刪除 User
+# 刪除 User
 
 ```bash
 userdel [-r] {USERNAME}
@@ -186,72 +176,53 @@ userdel [-r] {USERNAME}
 
 加上 `-r` option 代表要連同使用者的目錄一起刪除。
 
-### 使用 `usermod` 修改 User
+# 設定 User 的密碼
+
+```bash
+passwd {USERNAME}
+```
+
+> [!Note]
+> 設定完密碼才算正式啟用 user。
+
+# 修改 Username
 
 ```bash
 usermod {OPTIONS} {USERNAME}
 ```
 
-Option 與新增時一樣有 `-g`、`-G`、`-e`，範例如下：
+# 查詢指定 User 的資訊
 
 ```bash
-usermod -g accountant jamison
+id [{USERNAME}]
 ```
 
-### 查詢指定 User 的資訊
+若不輸入 `{USERNAME}` 則代表查詢目前登入的使用者。
 
-- **查詢指定 user 的詳細資訊**
+Example output:
 
-    ```bash
-    id [{USERNAME}]
-    ```
+```plaintext
+uid=0(root) gid=0(wheel) groups=0(wheel), 1(daemon), 2(kmem), 3(sys), 4(tty),5(operator),8(procview),9(procmod),12(everyone),20(staff),29(certusers),61(localaccounts),80(admin),33(_appstore),98(_lpadmin),100(_lpoperator),204(_developer),250(_analyticsusers),395(com.apple.access_ftp),398(com.apple.access_screensharing),399(com.apple.access_ssh),400(com.apple.access_remote_ae),701(com.apple.sharepoint.group.1)
+```
 
-    若不輸入 `{USERNAME}` 則代表查詢目前登入的使用者。
+**常用的 Options**
 
-    Example output:
+|Option|Description|
+|---|---|
+|`-u`|回傳指定 user 的編號|
+|`-un`|回傳指定 user 的 username|
+|`-g`|查詢指定 user 所屬的主要群組的編號|
+|`-gn`|查詢指定 user 所屬的主要群組的名稱|
+|`-G`|查詢指定 user 所屬的附屬群組的編號|
+|`-Gn`|查詢指定 user 所屬的主要群組的名稱|
 
-    ```plaintext
-    uid=0(root) gid=0(wheel) groups=0(wheel), 1(daemon), 2(kmem), 3(sys), 4(tty),5(operator),8(procview),9(procmod),12(everyone),20(staff),29(certusers),61(localaccounts),80(admin),33(_appstore),98(_lpadmin),100(_lpoperator),204(_developer),250(_analyticsusers),395(com.apple.access_ftp),398(com.apple.access_screensharing),399(com.apple.access_ssh),400(com.apple.access_remote_ae),701(com.apple.sharepoint.group.1)
-    ```
-
-- **加上 `-u` option 查詢指定 user 的 username**
-
-    ```bash
-    id -u [-n|-r] [{USERNAME}]
-    ```
-
-    `-u` 後面再加上 `-n` option 就是 stdout 指定 user 的 username；加上 `-r` option 則是 stdout 指定 user 的「編號」。
-
-- **加上 `-g` option 查詢指定 user 所屬的主要群組**
-
-    ```bash
-    id -g [-n|-r] [{USERNAME}]
-    ```
-
-- **加上 `-G` option 查詢指定 user 所屬的附加群組**
-
-    ```bash
-    id -G [-n|-r] [{USERNAME}]
-    ```
-
-    使用 `groups` 也可以查詢所屬的附加群組：
-
-    ```bash
-    groups [{USERNAME}]
-    ```
-
-### 列出所有 Users
-
-使用下方指令可以列出所有使用者：
+使用 `groups` 指令也可以查詢所屬的附加群組：
 
 ```bash
-awk -F ':' '{print $1}' /etc/passwd
+groups [{USERNAME}]
 ```
 
-> [!Info]
-> MacOS「新增／修改／刪除／查詢／列舉使用者與群組」的指令與 Linux 不同，詳細請見[[Tools/Mac/零碎筆記#如何建立透過 Terminal 一個 User|這裡]]。
-
-### 查詢目前登入的 User
+### 查詢當前 User 的 Username
 
 ```bash
 whoami
@@ -259,11 +230,22 @@ whoami
 echo $USER
 ```
 
-### 顯示目前有哪些使用者處於登入狀態
+# 列出所有 Users
+
+使用下方指令可以列出所有使用者：
+
+```bash
+awk -F ':' '{print $1}' /etc/passwd
+```
+
+### 列出所有處於登入狀態的 Users
 
 ```bash
 w
 ```
+
+> [!Info]
+> MacOS「新增／修改／刪除／查詢／列舉使用者與群組」的指令與 Linux 不同，詳細請見[[Tools/Mac/零碎筆記#如何建立透過 Terminal 一個 User|這裡]]。
 
 # 參考資料
 
