--- a/Programming Language/零碎筆記.md
+++ b/Programming Language/零碎筆記.md
@@ -5,7 +5,7 @@
 - 第一代程式語言：Machine language
 - 第二代程式語言：[[Assembly Language.draft|Assembly language]]
 - 第三代程式語言：高階程式語言 (higher-level language)
-    - e.g. C, C++, Java, Python, [[2 - Shell Script Overview|Shell script]]
+    - e.g. C, C++, Java, Python, [[2 - Shell Script|Shell script]]
 - 第四代程式語言：Query language
     - e.g. SQL
 
