--- a/Tools/Docker/0 - 安裝、啟用與刪除.md
+++ b/Tools/Docker/0 - 安裝、啟用與刪除.md
@@ -1,9 +1,9 @@
 # On Linux Ubuntu
 
-📄 [官方文件](https://docs.docker.com/engine/install/ubuntu/)
+>[!Info] 官方文件
+><https://docs.docker.com/engine/install/ubuntu/>
 
->[!Note]
->下方為官方文件的摘要，實際指令建議直接看最新的官方文件。
+下方為官方文件的摘要，實際指令建議直接看最新的官方文件。
 
 ### 安裝 Docker Engine
 
@@ -13,7 +13,7 @@
 for pkg in docker.io docker-doc docker-compose docker-compose-v2 podman-docker; do sudo apt-get remove $pkg; done
 ```
 
-當然如果這是你第一次安裝 Docker，很有可能你的電腦本來就沒有安裝上述這些 packages。
+當然，如果這是你第一次安裝 Docker，很有可能你的電腦本來就沒有安裝上述這些 packages，那就可以跳過這個步驟。
 
 ##### Step2: 移除 containerd 與 runc
 
@@ -22,7 +22,7 @@ for pkg in containerd runc; do sudo apt-get remove $pkg; done
 ```
 
 >[!Note]
->關於 Docker Engine、containerd 與 runc 之間的關係，請見 [[Tools/Docker/1 - Introduction|本文]]。
+>關於 Docker Engine、containerd 與 runc 之間的關係，請見[[Tools/Docker/1 - Introduction|本文]]。
 
 ##### Step3: Set up Docker's `apt` repository
 
@@ -50,14 +50,10 @@ sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin 
 
 Done! 安裝成功後，Docker daemon 會自動啟動，不須要手動啟動。
 
-### 確認是否安裝成功
+### 確認 Docker 版本
 
 ```bash
-# Check the version
 docker --version  # or `docker version` for detailed info
-
-# Download and run the "hello-world" image for testing
-sudo docker run hello-world
 ```
 
 若安裝成功，運行這個 container 後會印出一些確認訊息。
@@ -95,9 +91,11 @@ sudo rm -rf /var/lib/containerd
 
 # On MacOS
 
-### 安裝 Docker Desktop
+### 安裝 Docker Desktop 或其它類似的應用程式
 
-至[官方網站](https://docs.docker.com/desktop/install/mac-install/)下載，透過 GUI 安裝。
+至 [Docker Desktop 官方網站](https://docs.docker.com/desktop/install/mac-install/)下載，透過 GUI 安裝。
+
+其它類似的應用程式比如 [Orbstack](https://orbstack.dev/)。
 
 ### 啟動 Docker Daemon
 
@@ -108,6 +106,8 @@ open -a "Docker Desktop"
 ```
 
 ### 停止 Docker Daemon
+
+透過 GUI 或使用下方指令結束 Docker Desktop 應用程式：
 
 ```bash
 osascript -e 'quit app "Docker Desktop"'
