--- a/Operating System/Shell/與網路相關的指令.md
+++ b/Operating System/Shell/與網路相關的指令.md
@@ -346,7 +346,7 @@ router.asus.com (192.168.50.1) at 24:4b:fe:35:13:7c on en0 ifscope [ethernet]
 
 # `dig {DOMAIN}`
 
-- 查詢 `{DOMAIN}` 的 IP addresses (進行 [[DNS#DNS Lookup|DNS lookup]])
+- 查詢 `{DOMAIN}` 的 IP addresses（進行 [[DNS#DNS Lookup|DNS lookup]]）
 - `+short` option 可以讓輸出更為簡潔（只保留 IPv4 address 的部分）
 
 e.g.
